[Refactor] Repository -> service 레이어로 이동